--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,7 +25,7 @@ jobs:
         run: dotnet restore
 
       - name: Compilar Proyecto en Modo Producción
-        run: dotnet publish -c Release -o ./publish
+        run: dotnet build WebAppRep.sln --configuration Release
 
       - name: Subir Carpeta `publish` al Repositorio
         uses: JamesIves/github-pages-deploy-action@v4
