--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,4 +30,6 @@ jobs:
       - name: Publish
         uses: crazy-max/ghaction-github-pages@v4.1.0
         with:
-          build_dir: publish/wwwroot         
+          build_dir: publish/wwwroot     
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
