--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,13 +23,14 @@ jobs:
 
       - name: Restaurar Dependencias
         run: dotnet restore
-
-      - name: Compilar Proyecto en Modo Producción
-        run: dotnet build WebAppRep.sln --configuration Release
-
-      - name: Publish
-        uses: crazy-max/ghaction-github-pages@v4.1.0
+      - name: Publish 
+        run: dotnet publish --configuration Release --output build
+    # changes the base-tag in index.html from '/' to 'BlazorAppSpendsRegister' to match GitHub Pages repository subdirectory
+      - name: Change base-tag 
+        run: sed -i 's/<base href="\/" \/>/<base href="\/NetRepository\/" \/>/g' build/wwwroot/index.html
+      - name: Commit wwwroot to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
-          build_dir: publish     
-        env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          GITHUB_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
+          BRANCH: gh-pages
+          FOLDER: build/wwwroot
